--- a/Quantum Computing/QML/Hybrid_Control.ipynb
+++ b/Quantum Computing/QML/Hybrid_Control.ipynb
@@ -6,6 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
     "import random\n",
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -13,7 +14,7 @@
     "import matplotlib.pyplot as plt\n",
     "from sklearn.datasets import load_digits\n",
     "from sklearn.model_selection import train_test_split\n",
-    "dir = \"C:\\\\Users\\\\gga22\\\\OneDrive\\\\Desktop\\\\Quantum Computing\\\\QML\""
+    "dir = os.getcwd()"
    ]
   },
   {
@@ -157,7 +158,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7 (tags/v3.9.7:1016ef3, Aug 30 2021, 20:19:38) [MSC v.1929 64 bit (AMD64)]"
+   "version": "3.9.7"
   },
   "orig_nbformat": 4,
   "vscode": {
