Change to training and gitignore

--- a/Quantum Computing/QML/Control.ipynb
+++ b/Quantum Computing/QML/Control.ipynb
@@ -135,7 +135,8 @@
     }
    ],
    "source": [
-    "model.fit(data_tuple, alpha = 0.1, n_epochs = 1, display = True)"
+    "#model.fit(data_tuple, alpha = 0.1, n_epochs = 1, display = True)\n",
+    "model.quick_fit(data_tuple, alpha = 0.1, n_epochs = 1, display = True)"
    ]
   },
   {
